--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -19,6 +19,9 @@
             </intent-filter>
         </activity>
         <activity android:name="com.wjw.coolweather.activity.WeatherActivity"></activity>
+
+        <service android:name="com.wjw.coolweather.service.AutoUpdateService"></service>
+        <receiver android:name="com.wjw.coolweather.receiver.AutoUpdateReceiver"></receiver>
     </application>
 
 </manifest>
